[metadata]
name = django-bigquery-exporter
version = 0.1.7
description = A Django plugin for exporting CMS data to Google BigQuery.
long_description = file: README.rst
url = https://www.industrydive.com/
author = Dave Frame
author_email = dframe22@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2.5
    google-auth >= 1.32.1
    google-cloud-bigquery >= 2.30.1

[flake8]
max-line-length = 120